# Cloud-Onboarding

./: .gitignore  .pre-commit-config.yaml  COB_DEV_DOGMA  README.md  app.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  start-server.sh  test_main.py
.obsidian/: workspace.json
doc/: Documentation Introduction.md  Documentation standard and formatting.md  End user manual Introduction.md
doc/Business/: Product documentation Introduction.md  Project description.md
doc/Business/Product Requirements/: Product Requirements Document.md
doc/Development/: Code guidelines.md
doc/Product Requirements/: Project description.md  Requirements.md
doc/Source code/: Source code documentation Introduction.md
doc/Source code/Development/: Code guidelines.md  Test Driven.md  Testing.md
doc/Source code/Structure/: Directories.md
doc/Structure/: Directories.md
doc/Technical Requirements/: Technical requirements.md
docs/: Documentation Introduction.md  Documentation standard and formatting.md
docs/Business/: Product description.md
docs/Business/Product Requirements/: Product Requirements Document.md
docs/End user manual/: End user manual Introduction.md
docs/Source code/: Source code documentation Introduction.md
src/: config.py  db_interface.py  main.py  test.py
src/api/: discovery.py  project_api.py  user_api.py
src/containerizer/: __init__.py  build_container.py  instance.py  project.py
test/: client.py  context.py  end2end.py  hello_world.js  hello_world.py  test_discovery.py  test_example.py  test_instance.py  test_main.py  test_project.py  test_project_crud.py  test_user.py  test_user_api.py  user.py
test/api/: discovery.py  project_api.py  user_api.py
(+38 files in other folders)
