[tool.poetry]
package-mode = false
name = "cloud-computing"
version = "0.1.0"
description = ""
authors = ["vikto_konst <viktoconst@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "4.8.0"
requests = "2.31.0"
docker = "2.0.0"
fastapi = "0.112.0"
fastapi-cli = "0.0.5"
python-multipart = "^0.0.9"
setuptools = "^72.1.0"
httpx = "^0.27.0"
docker-py = "1.10.6"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.2"
mock = "^5.1.0"
mongomock = "^4.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
